--- a/packages/ui-library/src/css/details-tooltip.scss
+++ b/packages/ui-library/src/css/details-tooltip.scss
@@ -198,6 +198,13 @@
 			.nevermind {
 				margin-right: 10px;
 			}
+			a {
+				color: $color-active-blue;
+				text-transform: none;
+				&.secondary {
+					color: $color-rhino;
+				}
+			}
 		}
 		.details-close {
 			position: absolute;
